scss/spacing.scss
* {
  margin: 0;
}

@for $i from 0 through 5 {
  .p#{$i} {padding: $spacing * $i;}
  .pt#{$i} {padding-top: $spacing * $i;}
  .pb#{$i} {padding-bottom: $spacing * $i;}
  .pr#{$i} {padding-right: $spacing * $i;}
  .pl#{$i} {padding-left: $spacing * $i;}
  .px#{$i} {padding-left: $spacing * $i; padding-right: $spacing * $i;}
  .py#{$i} {padding-top: $spacing * $i; padding-bottom: $spacing * $i;}
}

@for $i from 0 through 5 {
  .m#{$i} {margin: $spacing * $i;}
  .mt#{$i} {margin-top: $spacing * $i;}
  .mb#{$i} {margin-bottom: $spacing * $i;}
  .mr#{$i} {margin-right: $spacing * $i;}
  .ml#{$i} {margin-left: $spacing * $i;}
  .mx#{$i} {margin-left: $spacing * $i; margin-right: $spacing * $i;}
  .my#{$i} {margin-top: $spacing * $i; margin-bottom: $spacing * $i;}
}

@media (min-width: $x-small){
  @for $i from 0 through 5 {
    .p#{$i}-xl {padding: $spacing * $i;}
    .pt#{$i}-xl {padding-top: $spacing * $i;}
    .pb#{$i}-xl {padding-bottom: $spacing * $i;}
    .pr#{$i}-xl {padding-right: $spacing * $i;}
    .pl#{$i}-xl {padding-left: $spacing * $i;}
    .px#{$i}-xl {padding-left: $spacing * $i; padding-right: $spacing * $i;}
    .py#{$i}-xl {padding-top: $spacing * $i; padding-bottom: $spacing * $i;}
  }

  @for $i from 0 through 5 {
    .m#{$i}-xl {margin: $spacing * $i;}
    .mt#{$i}-xl {margin-top: $spacing * $i;}
    .mb#{$i}-xl {margin-bottom: $spacing * $i;}
    .mr#{$i}-xl {margin-right: $spacing * $i;}
    .ml#{$i}-xl {margin-left: $spacing * $i;}
    .mx#{$i}-xl {margin-left: $spacing * $i; margin-right: $spacing * $i;}
    .my#{$i}-xl {margin-top: $spacing * $i; margin-bottom: $spacing * $i;}
  }
}

@media (min-width: $small){
  @for $i from 0 through 5 {
    .p#{$i}-sm {padding: $spacing * $i;}
    .pt#{$i}-sm {padding-top: $spacing * $i;}
    .pb#{$i}-sm {padding-bottom: $spacing * $i;}
    .pr#{$i}-sm {padding-right: $spacing * $i;}
    .pl#{$i}-sm {padding-left: $spacing * $i;}
    .px#{$i}-sm {padding-left: $spacing * $i; padding-right: $spacing * $i;}
    .py#{$i}-sm {padding-top: $spacing * $i; padding-bottom: $spacing * $i;}
  }

  @for $i from 0 through 5 {
    .m#{$i}-sm {margin: $spacing * $i;}
    .mt#{$i}-sm {margin-top: $spacing * $i;}
    .mb#{$i}-sm {margin-bottom: $spacing * $i;}
    .mr#{$i}-sm {margin-right: $spacing * $i;}
    .ml#{$i}-sm {margin-left: $spacing * $i;}
    .mx#{$i}-sm {margin-left: $spacing * $i; margin-right: $spacing * $i;}
    .my#{$i}-sm {margin-top: $spacing * $i; margin-bottom: $spacing * $i;}
  }
}

@media (min-width: $medium){
  @for $i from 0 through 5 {
    .p#{$i}-md {padding: $spacing * $i;}
    .pt#{$i}-md {padding-top: $spacing * $i;}
    .pb#{$i}-md {padding-bottom: $spacing * $i;}
    .pr#{$i}-md {padding-right: $spacing * $i;}
    .pl#{$i}-md {padding-left: $spacing * $i;}
    .px#{$i}-md {padding-left: $spacing * $i; padding-right: $spacing * $i;}
    .py#{$i}-md {padding-top: $spacing * $i; padding-bottom: $spacing * $i;}
  }

  @for $i from 0 through 5 {
    .m#{$i}-md {margin: $spacing * $i;}
    .mt#{$i}-md {margin-top: $spacing * $i;}
    .mb#{$i}-md {margin-bottom: $spacing * $i;}
    .mr#{$i}-md {margin-right: $spacing * $i;}
    .ml#{$i}-md {margin-left: $spacing * $i;}
    .mx#{$i}-md {margin-left: $spacing * $i; margin-right: $spacing * $i;}
    .my#{$i}-md {margin-top: $spacing * $i; margin-bottom: $spacing * $i;}
  }
}

@media (min-width: $large){
  @for $i from 0 through 5 {
    .p#{$i}-lg {padding: $spacing * $i;}
    .pt#{$i}-lg {padding-top: $spacing * $i;}
    .pb#{$i}-lg {padding-bottom: $spacing * $i;}
    .pr#{$i}-lg {padding-right: $spacing * $i;}
    .pl#{$i}-lg {padding-left: $spacing * $i;}
    .px#{$i}-lg {padding-left: $spacing * $i; padding-right: $spacing * $i;}
    .py#{$i}-lg {padding-top: $spacing * $i; padding-bottom: $spacing * $i;}
  }

  @for $i from 0 through 5 {
    .m#{$i}-lg {margin: $spacing * $i;}
    .mt#{$i}-lg {margin-top: $spacing * $i;}
    .mb#{$i}-lg {margin-bottom: $spacing * $i;}
    .mr#{$i}-lg {margin-right: $spacing * $i;}
    .ml#{$i}-lg {margin-left: $spacing * $i;}
    .mx#{$i}-lg {margin-left: $spacing * $i; margin-right: $spacing * $i;}
    .my#{$i}-lg {margin-top: $spacing * $i; margin-bottom: $spacing * $i;}
  }
}

@media (min-width: $x-large){
  @for $i from 0 through 5 {
    .p#{$i}-xl {padding: $spacing * $i;}
    .pt#{$i}-xl {padding-top: $spacing * $i;}
    .pb#{$i}-xl {padding-bottom: $spacing * $i;}
    .pr#{$i}-xl {padding-right: $spacing * $i;}
    .pl#{$i}-xl {padding-left: $spacing * $i;}
    .px#{$i}-xl {padding-left: $spacing * $i; padding-right: $spacing * $i;}
    .py#{$i}-xl {padding-top: $spacing * $i; padding-bottom: $spacing * $i;}
  }

  @for $i from 0 through 5 {
    .m#{$i}-xl {margin: $spacing * $i;}
    .mt#{$i}-xl {margin-top: $spacing * $i;}
    .mb#{$i}-xl {margin-bottom: $spacing * $i;}
    .mr#{$i}-xl {margin-right: $spacing * $i;}
    .ml#{$i}-xl {margin-left: $spacing * $i;}
    .mx#{$i}-xl {margin-left: $spacing * $i; margin-right: $spacing * $i;}
    .my#{$i}-xl {margin-top: $spacing * $i; margin-bottom: $spacing * $i;}
  }
}

